@@ -4,6 +4,8 @@ amaroK ChangeLog
 
 
 VERSION 1.2:
+  ADD: Tags are now read from the Collection database if they are already
+       stored. This speeds up adding items to the playlist. (BR 90137)
   ADD: Shaded current-track marker in playlist.
   CHG: Internal SQLite upgraded to 3.0.8.
 
